# emailer

./: README.md  pyproject.toml  report.md
src/emailer/: crew.py  main.py
