[tool.poetry]
name = "emailer"
version = "0.1.0"
description = "emailer using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
emailer = "emailer.main:run"
run_crew = "emailer.main:run"
train = "emailer.main:train"
replay = "emailer.main:replay"
test = "emailer.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
